# Mavericks_OpenEnv

./: .gitignore  Blog.MD  Dockerfile  Mavericks_Final_Training.ipynb  README.md  __init__.py  _cleanup.py  _create_config_dir.py  client.py  config_tasks_temp.yaml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
medical_triage_env/: __init__.py  env.py  graders.py  info_revealer.py  logs.py  models.py  session.py  tasks.py  tasks_new.py
server/: app.py
